feat: implement AI-driven CV review service and infrastructure components